--- a/src/App.css
+++ b/src/App.css
@@ -210,7 +210,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.1rem;       /* ajusta al tamaño que necesites */
   line-height: 1.6;
-  
+  font-weight: bold;
 }
 
 
