--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body,
 }
 
 body {
-  background-image: url('/public/fon.png');
+  background-image: url('/public/fondo.svg');
   background-size: 100% auto;
   background-attachment: scroll;    /* pinta detrás al hacer scroll */
   overflow-x: hidden;
